# Innovaid2023

./: LICENSE  README.md  Read_files.py  preprocess.py  pyproject.toml
innovaid/: __init__.py  loader.py
innovaid/dataloading/: __init__.py  loader.py
innovaid/model/: model.py
notebooks/: Classifier.ipynb  DataPresentation.ipynb  explore_data.ipynb  explore_gt.ipynb  explore_sktime.ipynb  get_variables.ipynb  train_model.ipynb  train_torch.ipynb
