[project]
name = "innovaid"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch ~= 2.1.0",
    "torchvision ~= 0.16.0",
    "numpy ~= 1.26.0",
    "numba ~= 0.58.0",
    "pandas ~= 2.1.0",
    "seaborn ~= 0.13.0",
    "sktime ~= 0.24.0",
    "lightning ~= 2.1.0",
    "tsai ~= 0.3.8",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["innovaid"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]
